--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <!-- Email Adress -->
       <div class="form-group">
         <label for="email">Email Address</label>
-        <input type="email" id="email" placeholder="555-555-5555">
+        <input type="email" id="email" placeholder="youremail@gmail.com">
       </div>
       <!-- Website URL -->
       <div class="form-group">
